[package]
name = "remove_named_key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "1.4.3", features = ["test-support"] }
casper-types = "1.4.5"
serde = { version = "1", features = [
  "derive",
  "alloc",
], default-features = false }
base16 = { version = "0.2", default-features = false, features = ["alloc"] }
casper-serde-json-wasm = { git = "https://github.com/darthsiroftardis/casper-serde-json-wasm", branch = "casper-no-std" }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "remove_named_keys"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true